react routing, finishing test harness

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>React App</title>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+		<script defer src="https://use.fontawesome.com/releases/v5.15.0/js/all.js" data-auto-replace-svg="nest" crossorigin="anonymous"></script>
+		
 		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
 	<body>
